EandT/main/default/objects/Account/fields/Billing_Contact__c.field-meta.xml
<CustomField>
    <fullName>Billing_Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>The contact who should be named on any invoices for this customer account</inlineHelpText>
    <label>Billing Contact</label>
    <lookupFilter>
        <active>true</active>
        <errorMessage>The contact you selected is not associated with this customer account</errorMessage>
        <filterItems>
            <field>$Source.Id</field>
            <operation>equals</operation>
            <valueField>Contact.AccountId</valueField>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Billing contact for Accounts</relationshipLabel>
    <relationshipName>Accounts</relationshipName>
    <type>Lookup</type>
</CustomField>