EandT/main/default/objects/Account/fields/Email_Copy__c.field-meta.xml
<CustomField>
    <fullName>Email_Copy__c</fullName>
    <label>Email Copy</label>
    <type>Email</type>
</CustomField>