EandT/main/default/objects/Account/fields/Fees_owed__c.field-meta.xml
<CustomField>
    <fullName>Fees_owed__c</fullName>
    <description>Rollup summary - Sum of Class Attendance fees owed for previous classes where the Fees Paid checkbox hasn't been set</description>
    <inlineHelpText>Sum of Class Attendance fees owed for previous classes where the Fees Paid checkbox hasn't been set</inlineHelpText>
    <label>Fees owed</label>
    <summarizedField>Class_Attendance__c.Amount_Owed__c</summarizedField>
    <summaryFilterItems>
        <field>Class_Attendance__c.Casual_Fee_Paid__c</field>
        <operation>notEqual</operation>
        <value>True</value>
    </summaryFilterItems>
    <summaryFilterItems>
        <field>Class_Attendance__c.Payment_Method__c</field>
        <operation>equals</operation>
        <value>Casual</value>
    </summaryFilterItems>
    <summaryForeignKey>Class_Attendance__c.Student__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>