EandT/main/default/objects/Account/fields/Upd__c.field-meta.xml
<CustomField>
    <fullName>Upd__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Hidden field used by workflow rule to detect an update being made. Work flow rules set this field to true then sets it back to false

Rules that need to take action do so when set to true before being set back to false</description>
    <label>Upd Trigger</label>
    <type>Checkbox</type>
</CustomField>