EandT/main/default/objects/Account/recordTypes/Business_Account.recordType-meta.xml
<RecordType>
    <fullName>Business_Account</fullName>
    <active>true</active>
    <description>A business with which contracts can be made and invoices raised for payment</description>
    <label>Business Account</label>
</RecordType>